--- a/style.css
+++ b/style.css
@@ -2,14 +2,9 @@
     height: 25%;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
-    padding: 15px;
     height: auto;
     border-bottom: solid 2px;
-}
-
-body {
-    background-image: linear-gradient(145deg, #0984e3,#74b9ff);
+    background-color: white;
 }
 
 /*Style Navbar*/
@@ -21,31 +16,29 @@ ul {
     padding: 5px;
     margin-top: 5px;
   }
-  
-  li {
-    float: left;
-  }
-  
+
+
   li a {
-    font-size: 30px;
+    font-size: 15px;
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    border: solid black 1px;
   }
   
   li a:hover {
-    background-color: #111;
+    background-color: whitesmoke;
   }
 /*End of Style Bar*/
 
 /*Style Tabel*/
 
 table {
-	width: 800px;
-	border-collapse: collapse;
-	overflow: hidden;
+	width: auto;
+    overflow: hidden;
+    background-color: grey;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
     margin-left: auto;
     margin-right: auto;
@@ -55,7 +48,7 @@ th,
 td {
 	padding: 15px;
 	background-color: rgba(255,255,255,0.2);
-	color: #fff;
+	color: black;
     text-align: center;
 }
 
@@ -148,6 +141,13 @@ h1,h2,h3,h4,h5,h6 {
     position: absolute;
 }
 
+pre {
+    width: auto;
+    margin: auto;
+    height: auto;
+    padding: 1px;
+}
+
 .flex-konten-menu {
     width: 10%;
 }
@@ -172,6 +172,7 @@ h1,h2,h3,h4,h5,h6 {
 
 .flex-konten:hover {
     transform: scale(1.2);
+    background-color: grey;
 }
 
 .visimisi {
@@ -286,9 +287,14 @@ a:hover {
     margin: 12px;
 }
 
+#home:hover {
+    background-color: grey;
+}
+
 .closebtn:hover{
     margin: 10px;
-    background-color: transparent;
+    background-color: grey;
+    color: black;
 }
 .sidebar {
     height: 100%;
@@ -300,7 +306,7 @@ a:hover {
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-    background-image: linear-gradient(145deg, #0984e3,#74b9ff);
+    background-color: whitesmoke;
 }
 
 .sidebar a:hover {
